dropshot/tests/fail/bad_endpoint14.stderr
error: endpoint `must_be_unpublished` has paths that contain a wildcard match, but is not marked 'unpublished = true'
  --> tests/fail/bad_endpoint14.rs:20:5
   |
20 | /     method = GET,
21 | |     path = "/assets/{stuff:.*}",
   | |________________________________^
